* Quartz.Xml.XMLSchedulingDataProcessor uses GetType() instead of typeof(Quartz.Xml.XMLSchedulingDataProcessor) (#277)
* With SQLite default isolation level should be set to serializable (#242)
* DailyTimeIntervalTrigger's time zone is not persisted into database (#136)
* XMLSchedulingDataProcessorPlugin incompatible with StdAdoDelegate when useProperties=true (#44)


Release 2.5, Feb 18, 2017
--------------------------------

This release contains mainly bug fixes but because there's a behavioural change in
DST handling (for the better) that warrants for a minor version number increment.

See https://github.com/quartznet/quartznet/pull/317 for details.

FIXES

* Jobs get stuck in the Blocked state after the DB connection is lost in NotifyJobListenersComplete (#282)
* Oracle rownum based queries can work wrong after Oracle SQL tuning task has ran (#413)
* Handle DST better (#317)
* RAMJobStore fails to resume when paused without triggers (#433)
* CronExpression doesn't properly check the range when an "/interval" is specified (#432)
* Fix JobDataMap dirty flag when constructing from existing map (#431)
* Store triggers by job in RAMJobStore for better performance (#430)
* Create WorkerThread in virtual method (#426)
* SqlSelectJobForTrigger is not using primary key join and causes index scan (#407)

Release 2.4.1, Aug 24, 2016
--------------------------------

FIXES

* Fix Common.Logging version 3.3.1 to be a true binary reference instead of just NuGet dependency


Release 2.4, Aug 18, 2016
--------------------------------

Only minor changes and fixes but dependency updates which merits for a minor version upgrade.
This version changes HolidayCalendar serialization not to depend on C5 library.
Quartz v3 can only handle HolidayCalendars serialized in this 2.4 binary format.

NEW FEATURE

* Add SQL limit support for MySQLDelegate
* Removed dbFailureRetryInterval since it is no longer used 
* Update Common Logging to v3.3.1 

FIXES
