@@ -1,20 +1,20 @@
 ﻿#region License
 
-/* 
- * All content copyright Terracotta, Inc., unless otherwise indicated. All rights reserved. 
- * 
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not 
- * use this file except in compliance with the License. You may obtain a copy 
- * of the License at 
- * 
- *   http://www.apache.org/licenses/LICENSE-2.0 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the 
- * License for the specific language governing permissions and limitations 
+/*
+ * All content copyright Terracotta, Inc., unless otherwise indicated. All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy
+ * of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations
  * under the License.
- * 
+ *
  */
 
 #endregion
@@ -54,14 +54,14 @@ namespace Quartz.Impl.Triggers
     /// <para>
     /// If startTime is before startTimeOfDay, then startTimeOfDay will be used and startTime has no affect other than to specify
     /// the first day of firing. Else if startTime is  after startTimeOfDay, then the first fire time for that day will be the next
-    /// interval after the startTime. For example, if you set startingTimeOfDay=9am, endingTimeOfDay=11am, interval=15 mins, and startTime=9:33am, 
-    /// then the next fire time will be 9:45pm. Note also that if you do not set startTime value, the trigger builder will default to current time, and current time 
+    /// interval after the startTime. For example, if you set startingTimeOfDay=9am, endingTimeOfDay=11am, interval=15 mins, and startTime=9:33am,
+    /// then the next fire time will be 9:45pm. Note also that if you do not set startTime value, the trigger builder will default to current time, and current time
     /// maybe before or after the startTimeOfDay! So be aware how you set your startTime.
     /// </para>
     /// <para>
     /// This trigger also supports "repeatCount" feature to end the trigger fire time after
-    /// a certain number of count is reached. Just as the SimpleTrigger, setting repeatCount=0 
-    /// means trigger will fire once only! Setting any positive count then the trigger will repeat 
+    /// a certain number of count is reached. Just as the SimpleTrigger, setting repeatCount=0
+    /// means trigger will fire once only! Setting any positive count then the trigger will repeat
     /// count + 1 times. Unlike SimpleTrigger, the default value of repeatCount of this trigger
     /// is set to REPEAT_INDEFINITELY instead of 0 though.
     /// </para>
@@ -264,7 +264,7 @@ namespace Quartz.Impl.Triggers
         }
 
         /// <summary>
-        /// Get the number of times for interval this trigger should repeat, 
+        /// Get the number of times for interval this trigger should repeat,
         /// after which it will be automatically deleted.
         /// </summary>
         public int RepeatCount
@@ -361,7 +361,7 @@ namespace Quartz.Impl.Triggers
             return true;
         }
 
-        /// <summary> 
+        /// <summary>
         /// Updates the <see cref="ICalendarIntervalTrigger" />'s state based on the
         /// MisfireInstruction.XXX that was selected when the <see cref="IDailyTimeIntervalTrigger" />
         /// was created.
@@ -400,8 +400,8 @@ namespace Quartz.Impl.Triggers
             {
                 // fire once now...
                 SetNextFireTimeUtc(SystemTime.UtcNow());
-                // the new fire time afterward will magically preserve the original  
-                // time of day for firing for day/week/month interval triggers, 
+                // the new fire time afterward will magically preserve the original
+                // time of day for firing for day/week/month interval triggers,
                 // because of the way getFireTimeAfter() works - in its always restarting
                 // computation from the start time.
             }
@@ -445,7 +445,7 @@ namespace Quartz.Impl.Triggers
         }
 
         /// <summary>
-        /// 
+        ///
         /// </summary>
         /// <param name="calendar"></param>
         /// <param name="misfireThreshold"></param>
@@ -495,17 +495,17 @@ namespace Quartz.Impl.Triggers
         /// added to the scheduler, in order to have the <see cref="ITrigger" />
         /// compute its first fire time, based on any associated calendar.
         /// </para>
-        /// 
+        ///
         /// <para>
         /// After this method has been called, <see cref="ITrigger.GetNextFireTimeUtc" />
         /// should return a valid answer.
         /// </para>
         /// </remarks>
-        /// <returns> 
+        /// <returns>
         /// The first time at which the <see cref="ITrigger" /> will be fired
         /// by the scheduler, which is also the same value <see cref="ITrigger.GetNextFireTimeUtc" />
         /// will return (until after the first firing of the <see cref="ITrigger" />).
-        /// </returns>        
+        /// </returns>
         public override DateTimeOffset? ComputeFirstFireTimeUtc(ICalendar calendar)
         {
             nextFireTimeUtc = GetFireTimeAfter(StartTimeUtc.AddSeconds(-1));
@@ -627,7 +627,7 @@ namespace Quartz.Impl.Triggers
             // now change to local time zone
             afterTime = TimeZoneUtil.ConvertTime(afterTime.Value, TimeZone);
 
-            // b.Check to see if afterTime is after endTimeOfDay or not. 
+            // b.Check to see if afterTime is after endTimeOfDay or not.
             // If yes, then we need to advance to next day as well.
             bool afterTimePastEndTimeOfDay = false;
             if (endTimeOfDay != null)
@@ -635,7 +635,7 @@ namespace Quartz.Impl.Triggers
                 afterTimePastEndTimeOfDay = afterTime.Value > endTimeOfDay.GetTimeOfDayForDate(afterTime).Value;
             }
 
-            // c. now we need to move to the next valid day of week if either: 
+            // c. now we need to move to the next valid day of week if either:
             // the given time is past the end time of day, or given time is not on a valid day of week
             DateTimeOffset? fireTime = AdvanceToNextDayOfWeekIfNecessary(afterTime.Value, afterTimePastEndTimeOfDay);
 
@@ -678,7 +678,7 @@ namespace Quartz.Impl.Triggers
             long secondsAfterStart = (long)(fireTime.Value - startTimeUtc).TotalSeconds;
             long repeatLong = RepeatInterval;
 
-            DateTimeOffset sTime = fireTimeStartDate;
+            DateTimeOffset sTime = fireTimeStartDate.ToUniversalTime();
             IntervalUnit repeatUnit = RepeatIntervalUnit;
             if (repeatUnit == IntervalUnit.Second)
             {
@@ -689,7 +689,7 @@ namespace Quartz.Impl.Triggers
                 }
 
                 sTime = sTime.AddSeconds(RepeatInterval * (int)jumpCount);
-                fireTime = sTime;
+                fireTime = TimeZoneUtil.ConvertTime(sTime, TimeZone);
             }
             else if (repeatUnit == IntervalUnit.Minute)
             {
@@ -699,7 +699,7 @@ namespace Quartz.Impl.Triggers
                     jumpCount++;
                 }
                 sTime = sTime.AddMinutes(RepeatInterval * (int)jumpCount);
-                fireTime = sTime;
+                fireTime = TimeZoneUtil.ConvertTime(sTime, TimeZone);
             }
             else if (repeatUnit == IntervalUnit.Hour)
             {
@@ -709,7 +709,7 @@ namespace Quartz.Impl.Triggers
                     jumpCount++;
                 }
                 sTime = sTime.AddHours(RepeatInterval * (int)jumpCount);
-                fireTime = sTime;
+                fireTime = TimeZoneUtil.ConvertTime(sTime, TimeZone);
             }
 
             // g. Ensure this new fireTime is within the day, or else we need to advance to next day.
@@ -726,11 +726,7 @@ namespace Quartz.Impl.Triggers
                 return null;
             }
 
-            // apply proper offset
-            var d = fireTime.Value;
-            d = new DateTimeOffset(d.DateTime, TimeZoneUtil.GetUtcOffset(d.DateTime, this.TimeZone));
-
-            return d.ToUniversalTime();
+            return fireTime.Value.ToUniversalTime();
         }
 
         private bool IsSameDay(DateTimeOffset d1, DateTimeOffset d2)
@@ -869,7 +865,7 @@ namespace Quartz.Impl.Triggers
         /// </summary>
         /// <returns>
         /// A Set containing the integers representing the days of the week, per the values 0-6 as defined by
-        /// DayOfWees.Sunday - DayOfWeek.Saturday. 
+        /// DayOfWees.Sunday - DayOfWeek.Saturday.
         /// </returns>
         public ISet<DayOfWeek> DaysOfWeek
         {
@@ -951,7 +947,7 @@ namespace Quartz.Impl.Triggers
         }
 
         /// <summary>
-        /// Get a <see cref="IScheduleBuilder" /> that is configured to produce a 
+        /// Get a <see cref="IScheduleBuilder" /> that is configured to produce a
         /// schedule identical to this trigger's schedule.
         /// </summary>
         /// <returns></returns>
